Update expert application post request
