# app/Http/Resources/ExpertResource.php
@@ -16,6 +16,10 @@ class ExpertResource extends JsonResource
             'name' => $this->name,
             'professional_headline' => $application?->professional_headline,
             'bio' => $application?->bio,
+            'years_of_experience' => $application?->years_of_experience,
+            'registration_value' => $application?->registration_value,
+            'intro_video' => $application?->intro_video,
+            'languages' => $application?->languages ?? [],
             'education' => $application?->education,
             'experience' => $application?->experience,
             'portfolio' => $application?->portfolio,
